# chippy

./: .gitignore  Audio_Scope.cpp  Audio_Scope.h  CMakeLists.txt  Music_Player.cpp  Music_Player.cpp.orig  Music_Player.cpp.rej  Music_Player.h  Music_Player.h.orig  Playlist.cpp  Playlist.h  player.cpp
convert2wav/: CMakeLists.txt  basics.c
gme/: CMakeLists.txt
